# vscode-quirrel

./: .gitignore  .vscodeignore  CHANGELOG.md  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
scripts/: build-wasm.mjs  check-wasm.mjs  test-grammar.mjs
snippets/: quirrel.json
src/: SubstitutePathByFile.ts  SubstituteValueByKey.ts  checkSyntaxOnSave.ts  clearDiagsOnClose.ts  definitionProvider.ts  documentSymbolProvider.ts  extension.ts  mapKeyValue.ts  quirrelParser.ts  runDocumentCode.ts  semanticHighlighter.ts  syntaxDiags.ts  utils.ts
syntaxes/: quirrel.tmLanguage.json  squirrel.tmLanguage.json
wasm/: CMakeLists.txt  analyze.cpp  extract_symbols.cpp  find_declaration.cpp  native.cpp  semantic_tokens.cpp  utils.cpp  utils.h
